# sequel2sql

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  benchmark.sh  db_skills_benchmark.sh  environment.yml  pyproject.toml  requirements.txt  sequel2sql.py  setup.py  test_output.txt  test_results.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation.md  ---feature-request.md  --questions.md  config.yml
benchmark/: IMPLEMENTATION.md  README.md  docker-compose.yml  main.py
benchmark/results/: llm_tool_metrics.json  llm_tool_metrics_error_stats.json  mini_dev_metrics.json
benchmark/scripts/: benchmark_correctness.py  demo_valid_flag.py  extract_schemas.py  plot_results.py  run_llm_tool_metrics.py  test_all_validators.py  test_valid_flag.py
benchmark/src/: __init__.py  api_client.py  checkpoint_manager.py  config.py  inference_engine.py  logger.py  logger_config.py  post_processor.py  postgresql_utils.py  prompt_generator.py  sequel2sql_client.py  ui.py
db_skills_benchmark/: README.md  main.py  test_seed.py
db_skills_benchmark/src/: __init__.py  cli.py  config.py  explanation_generator.py  logger.py  runner.py  seeder.py  stats_reporter.py
docker/: .env.example  Dockerfile.dbdex  Dockerfile.schema  README.md  docker-compose.yml  test-containers.sh
docs/: evaluation_setup.md
evaluation_output/: docker-compose.yml
query_intent_vectorDB/: process_query_intent.py  query_intent_metadata.jsonl
src/: load_spider2_dataset.py  load_spider_dataset.py  run_query.py  sqlagent.py
src/agent/: sqlagent.py  test_cases.json
src/ast_parsers/: README.md  __init__.py  error_codes.py  error_context.py  errors.py  llm_tool.py  models.py  query_analyzer.py  result.py  tags.py  validator.py
tests/: __init__.py  check_databases.py  inspect_chroma_db.py  run_complex_queries.py  test_database_con.py  test_search_similar_query.py  test_tools.py  test_validator.py
(+65 files in other folders)
