[project]
name = "sequel2sql"
version = "0.1.0"
description = "An agentic LLM + RAG framework for PostgreSQL error diagnosis, optimization, and correction."
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "requests>=2.32.5",
    "datasets>=2.17.0",
    "sqlglot>=20.0.0",
    "pydantic<2.0",
    "sentence-transformers>=2.2.2",
    "chromadb==0.3.29",
]
