[project]
name = "sequel2sql"
version = "0.1.0"
description = "An agentic LLM + RAG framework for PostgreSQL error diagnosis, optimization, and correction."
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "google-genai>=1.61.0",
    "psycopg2-binary>=2.9.11",
    "pyfiglet>=1.0.4",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "tqdm>=4.67.2",
]
