[project]
name = "sequel2sql"
version = "0.1.0"
description = "An agentic LLM + RAG framework for PostgreSQL error diagnosis, optimization, and correction."
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "flask>=3.1.2",
    "pydantic-ai>=1.51.0",
    "pydantic-ai-slim[google]>=1.51.0",
    "pydantic-ai-slim[web]>=1.51.0",
    "requests>=2.32.5",
    "logfire>=2.8.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.40.0",
    "google-genai>=1.61.0",
    "psycopg2-binary>=2.9.11",
    "pyfiglet>=1.0.4",
    "python-dotenv>=1.2.1",
    "questionary>=2.1.1",
    "requests>=2.32.5",
    "psycopg2-binary>=2.9.9",
    "pymysql>=1.1.0",
    "pyodbc>=5.1.0",
    "oracledb>=2.0.0",
    "rich>=14.3.2",
    "tqdm>=4.67.2",
    "pydantic>=2.0.0",
    "requests>=2.32.5",
    "datasets>=2.17.0",
    "sqlglot>=20.0.0",
    "sentence-transformers>=2.2.2",
    "chromadb>=1.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
